--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "description": "",
   "dependencies": {
     "chakra": "^0.0.3",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
